adding example to lecture 5

--- a/notebooks/lecture_5_pandas.ipynb
+++ b/notebooks/lecture_5_pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,6 +1098,165 @@
     "\n",
     "predictions"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example of non trivial way of using groupby"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>region</th>\n",
+       "      <th>level_1</th>\n",
+       "      <th>date</th>\n",
+       "      <th>sales</th>\n",
+       "      <th>cumulative_sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>East</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2024-01-02</td>\n",
+       "      <td>500</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>East</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2024-01-04</td>\n",
+       "      <td>300</td>\n",
+       "      <td>800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>North</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2024-01-01</td>\n",
+       "      <td>200</td>\n",
+       "      <td>200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>North</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2024-01-05</td>\n",
+       "      <td>150</td>\n",
+       "      <td>350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>North</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-01-07</td>\n",
+       "      <td>300</td>\n",
+       "      <td>650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>South</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2024-01-03</td>\n",
+       "      <td>400</td>\n",
+       "      <td>400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>South</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2024-01-06</td>\n",
+       "      <td>250</td>\n",
+       "      <td>650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>South</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2024-01-08</td>\n",
+       "      <td>100</td>\n",
+       "      <td>750</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  region  level_1       date  sales  cumulative_sales\n",
+       "0   East        6 2024-01-02    500               500\n",
+       "1   East        7 2024-01-04    300               800\n",
+       "2  North        0 2024-01-01    200               200\n",
+       "3  North        1 2024-01-05    150               350\n",
+       "4  North        2 2024-01-07    300               650\n",
+       "5  South        3 2024-01-03    400               400\n",
+       "6  South        4 2024-01-06    250               650\n",
+       "7  South        5 2024-01-08    100               750"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sample DataFrame with sales transactions\n",
+    "data = {\n",
+    "    'date': ['2024-01-01', '2024-01-05', '2024-01-07', '2024-01-03', '2024-01-06', '2024-01-08', '2024-01-02', '2024-01-04'],\n",
+    "    'region': ['North', 'North', 'North', 'South', 'South', 'South', 'East', 'East'],\n",
+    "    'sales': [200, 150, 300, 400, 250, 100, 500, 300]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "df['date'] = pd.to_datetime(df['date'])\n",
+    "\n",
+    "# Define a custom function to compute cumulative sales\n",
+    "def compute_cumulative_sales(group):\n",
+    "    # Sort by date to ensure the cumulative sum is calculated correctly\n",
+    "    group = group.sort_values(by='date')\n",
+    "    \n",
+    "    # Calculate cumulative sales\n",
+    "    group['cumulative_sales'] = group['sales'].cumsum()\n",
+    "    return group\n",
+    "\n",
+    "# Apply the custom function to each group using groupby\n",
+    "df_cumulative_sales = df.groupby('region').apply(compute_cumulative_sales, include_groups=False)\n",
+    "\n",
+    "df_cumulative_sales.reset_index()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
