--- a/notebooks/practice_problems_week-3-4.ipynb
+++ b/notebooks/practice_problems_week-3-4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,6 +112,33 @@
     "s = re.sub(r'[^\\w\\s]','',s)\n",
     "s"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Problem 4**: Given the dataframe below, write a solution to find, for each date, the total number of items ordered and the names of all unique items sold, sorted lexicographically.\n",
+    "\n",
+    "The unique item names for each date should be separated by commas and sorted alphabetically."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {\n",
+    "    'order_id': [1, 2, 3, 4, 5, 6, 7, 8],\n",
+    "    'order_date': ['2023-01-01', '2023-01-01', '2023-01-02', '2023-01-01', \n",
+    "                   '2023-01-03', '2023-01-02', '2023-01-03', '2023-01-03'],\n",
+    "    'item': ['Apple', 'Banana', 'Apple', 'Apple', 'Orange', 'Banana', 'Banana', 'Apple'],\n",
+    "    'quantity': [10, 5, 3, 2, 7, 4, 6, 8]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "df['order_date'] = pd.to_datetime(df['order_date'])"
+   ]
   }
  ],
  "metadata": {
@@ -130,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
