--- a/notebooks/lecture_5_pandas.ipynb
+++ b/notebooks/lecture_5_pandas.ipynb
@@ -18,13 +18,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Filtering"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 78,
    "metadata": {},
@@ -150,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exercise:\n",
+    "**Problems Set 1: Filtering**\n",
     "\n",
     "1. Filter the DataFrame to show only the rows where the Age is greater than 25 and the Score is greater than 80.\n",
     "\n",
@@ -165,9 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Combining multiple columns\n",
-    "\n",
-    "Problem: You are given a DataFrame that contains the preferred travel destinations of two friends. Each row represents the travel preferences of a pair of friends—Friend A and Friend B.\n",
+    "**Problem 2**: You are given a DataFrame that contains the preferred travel destinations of two friends. Each row represents the travel preferences of a pair of friends—Friend A and Friend B.\n",
     "\n",
     "Task 1: Construct a column that shows the destinations common to each pair of friends.\n",
     "\n",
@@ -383,7 +374,7 @@
    "metadata": {},
    "source": [
     "### Aggregating information \n",
-    "**Problem:** Library Book Inventory Management\n",
+    "**Problem 3:** Library Book Inventory Management\n",
     "You manage a collection of libraries, and you want to evaluate the availability of books across different locations. Given a DataFrame containing columns for the library name, book title, and the number of copies available:\n",
     "\n",
     "Task 1: Determine how many libraries carry each book.\n",
@@ -395,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +473,7 @@
        "6     East  The Catcher in the Rye                 4"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +551,7 @@
        "The Hobbit                    2"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +597,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>book</th>\n",
-       "      <th>0</th>\n",
+       "      <th>counts</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -635,21 +626,21 @@
        "</div>"
       ],
       "text/plain": [
-       "                     book  0\n",
-       "0                    Dune  2\n",
-       "1            Harry Potter  3\n",
-       "2  The Catcher in the Rye  4\n",
-       "3              The Hobbit  5"
+       "                     book  counts\n",
+       "0                    Dune       2\n",
+       "1            Harry Potter       3\n",
+       "2  The Catcher in the Rye       4\n",
+       "3              The Hobbit       5"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# include_groups=False is used to avoid some warning messages\n",
-    "library_books.groupby(\"book\").apply(count_copies, include_groups=False).reset_index()"
+    "library_books.groupby(\"book\").apply(count_copies, include_groups=False).reset_index(name=\"counts\")"
    ]
   },
   {
@@ -663,79 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>book</th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Dune</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Harry Potter</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>The Catcher in the Rye</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>The Hobbit</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     book  0\n",
-       "0                    Dune  1\n",
-       "1            Harry Potter  1\n",
-       "2  The Catcher in the Rye  0\n",
-       "3              The Hobbit  1"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "library_books.groupby(\"book\").apply(lambda x: (x[\"copies_available\"] == 0).sum(), include_groups=False).reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -762,23 +681,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Solving Problems"
+    "## Solve Talks 2 and 3 here"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Problem:** Employee Work Hours Analysis\n",
+    "**Problem 4:** Employee Work Hours Analysis\n",
     "\n",
     "You have a DataFrame representing employee work hours. Each row corresponds to an employee and their reported work hours for different days of the week. However, some data entries are missing.\n",
     "\n",
     "Given this DataFrame of employee work hours, you need to:\n",
     "\n",
     "Task 1: Discard rows where more than half of the values are NaN.\n",
+    "\n",
     "Task 2: Impute the missing values (NaN):\n",
     "> For numeric columns (hours), replace NaN with the average value for that column. </br>\n",
     "> For non-numeric columns (department), replace NaN with the mode of that column."
@@ -989,7 +911,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Problem:** Analyze Text Sentiment Predictions\n",
+    "**Problem 5:** Analyze Text Sentiment Predictions\n",
     "\n",
     "You are given a DataFrame that represents sentiment predictions for different pieces of text. Each row corresponds to the predictions for a specific text, with the predictions stored in a dictionary  where the keys represent the sentiment and the values represent the probability associated with each sentiment.\n",
     "\n",
@@ -1301,13 +1223,6 @@
     "\n",
     "df_cumulative_sales.reset_index()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
