--- a/notebooks/lecture_6_pandas.ipynb
+++ b/notebooks/lecture_6_pandas.ipynb
@@ -654,6 +654,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Optional task:\n",
+    "## Create a better compute_session_id function by:\n",
+    "## Identify the sessions start l1[\"diff\"].isna() | (l1[\"diff\"] > td20) \n",
+    "## Use cumsum on session start to create a new session number."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1872,7 +1884,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
