--- a/notebooks/practice_problems_week-3-4.ipynb
+++ b/notebooks/practice_problems_week-3-4.ipynb
@@ -13,6 +13,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "TODO: add more problems"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Exercise 1**: Write a solution to find all the employees who approved at least one of their own requests. An employee is considered to have approved their own request if their employee_id matches their approver_id for any row in the table."
    ]
   },
@@ -157,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
