--- a/notebooks/lecture_5_pandas.ipynb
+++ b/notebooks/lecture_5_pandas.ipynb
@@ -891,7 +891,7 @@
     "cat_cols = employee_hours.columns[-1:]\n",
     "num_cols, cat_cols\n",
     "\n",
-    "# Write a function that can candle numerical columns and one that can candle categorical columns\n",
+    "# Write a function that can handle numerical columns and one that can handle categorical columns\n",
     "# Apply the function to each col.\n",
     "# Note that mode can give multiple answers."
    ]
