--- a/notebooks/lecture_5_pandas.ipynb
+++ b/notebooks/lecture_5_pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        "6     East  The Catcher in the Rye                 4"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,39 +654,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('Dune',   library  book  copies_available\n",
-      "3   North  Dune                 0\n",
-      "4   South  Dune                 2)\n",
-      "('Harry Potter',    library          book  copies_available\n",
-      "0  Central  Harry Potter                 3\n",
-      "5    South  Harry Potter                 0)\n",
-      "('The Catcher in the Rye',   library                    book  copies_available\n",
-      "6    East  The Catcher in the Rye                 4)\n",
-      "('The Hobbit',    library        book  copies_available\n",
-      "1  Central  The Hobbit                 0\n",
-      "2    North  The Hobbit                 5)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for group in library_books.groupby(\"book\"):\n",
-    "    print(group)"
+    "    group"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Solve Talks 2 and 3 here"
+    "## Solve Talk 3 here"
    ]
   },
   {
@@ -1222,6 +1204,118 @@
     "df_cumulative_sales = df.groupby('region').apply(compute_cumulative_sales, include_groups=False)\n",
     "\n",
     "df_cumulative_sales.reset_index()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>region</th>\n",
+       "      <th>sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-01-01</td>\n",
+       "      <td>North</td>\n",
+       "      <td>200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-01-05</td>\n",
+       "      <td>North</td>\n",
+       "      <td>150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-01-07</td>\n",
+       "      <td>North</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-01-03</td>\n",
+       "      <td>South</td>\n",
+       "      <td>400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-01-06</td>\n",
+       "      <td>South</td>\n",
+       "      <td>250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2024-01-08</td>\n",
+       "      <td>South</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2024-01-02</td>\n",
+       "      <td>East</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2024-01-04</td>\n",
+       "      <td>East</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        date region  sales\n",
+       "0 2024-01-01  North    200\n",
+       "1 2024-01-05  North    150\n",
+       "2 2024-01-07  North    300\n",
+       "3 2024-01-03  South    400\n",
+       "4 2024-01-06  South    250\n",
+       "5 2024-01-08  South    100\n",
+       "6 2024-01-02   East    500\n",
+       "7 2024-01-04   East    300"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = {\n",
+    "    'date': ['2024-01-01', '2024-01-05', '2024-01-07', '2024-01-03', '2024-01-06', '2024-01-08', '2024-01-02', '2024-01-04'],\n",
+    "    'region': ['North', 'North', 'North', 'South', 'South', 'South', 'East', 'East'],\n",
+    "    'sales': [200, 150, 300, 400, 250, 100, 500, 300]\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
+    "df['date'] = pd.to_datetime(df['date'])\n",
+    "df"
    ]
   }
  ],
