adding filtering example

--- a/notebooks/lecture_8_xml_xpath.ipynb
+++ b/notebooks/lecture_8_xml_xpath.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "b1dcab0a",
    "metadata": {
     "tags": []
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "221fca4b",
    "metadata": {
     "tags": []
@@ -866,6 +866,99 @@
     "\n",
     "# Find authors who write books in English\n",
     "root.xpath(\"./book[title/@lang='en']/author/text()\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afd9d504",
+   "metadata": {},
+   "source": [
+    "### Filtering based on numerical values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9c4a834d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xmlstring=\"\"\"\n",
+    "<products>\n",
+    "    <product>\n",
+    "        <name>Phone</name>\n",
+    "        <price>500</price>\n",
+    "        <rating>4.5</rating>\n",
+    "    </product>\n",
+    "    <product>\n",
+    "        <name>Laptop</name>\n",
+    "        <price>1200</price>\n",
+    "        <rating>4.7</rating>\n",
+    "    </product>\n",
+    "    <product>\n",
+    "        <name>Headphones</name>\n",
+    "        <price>150</price>\n",
+    "        <rating>4.2</rating>\n",
+    "    </product>\n",
+    "    <product>\n",
+    "        <name>Tablet</name>\n",
+    "        <price>300</price>\n",
+    "        <rating>4.0</rating>\n",
+    "    </product>\n",
+    "</products>\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3db2249a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root = etree.fromstring(xmlstring)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9a21285d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Element product at 0x107fc3900>, <Element product at 0x11d9c0400>]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root.xpath(\"//product[price > 300]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "36484af1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Element product at 0x107fc3900>, <Element product at 0x11d9cf740>]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root.xpath(\"//product[price >= 200 and price <= 600]\")\n"
    ]
   }
  ],
