--- a/notebooks/lab_10_selenium.ipynb
+++ b/notebooks/lab_10_selenium.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Navigating\n",
+    "###  Navigating\n",
     "Navigate to the official USF website in Chrome: \"https://www.usfca.edu/\"."
    ]
   },
@@ -64,7 +64,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Getting a list of courses for the MS in Data science"
+    "### Task 1:\n",
+    " Getting a list of courses for the MS in Data science"
    ]
   },
   {
@@ -119,6 +120,7 @@
     }
    ],
    "source": [
+    "# Here is the list\n",
     "[el.text for el in els]"
    ]
   },
@@ -137,7 +139,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Clicking on an button"
+    "### Task 2: \n",
+    "Click on the button \"REQUEST INFO\"."
    ]
   },
   {
@@ -148,6 +151,7 @@
    },
    "outputs": [],
    "source": [
+    "# This is how you swich windows after a click sends you to a new window\n",
     "current_window = driver.window_handles[0]\n",
     "new_window = driver.window_handles[1]\n",
     "driver.switch_to.window(new_window)"
@@ -162,6 +166,15 @@
    "outputs": [],
    "source": [
     "driver.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task 3: Fill a form\n",
+    "(This is optional)\n",
+    "Send Request Information - Master's Programs. Aija will be happy to hear from you."
    ]
   }
  ],
